adding new things1

--- a/Index.html
+++ b/Index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h2>Look mama i am github</h2>
+    <h1>this is my first git naranari</h1>
+    <h2>Look mama i am using github</h2>
 </body>
 </html>
