--- a/Index.html
+++ b/Index.html
@@ -11,5 +11,6 @@
     <h2>Look mama i am using github</h2>
     <h3>hi it's your tukku</h3>
     <h4>ahh, i see</h4>
+    <img src="bdflag.png" alt="">
 </body>
 </html>
